--- a/SecondLab/app/src/main/res/layout-land/activity_main.xml
+++ b/SecondLab/app/src/main/res/layout-land/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="30dp"
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
     <TextView
