--- a/SecondLab/app/src/main/res/layout-land/activity_main.xml
+++ b/SecondLab/app/src/main/res/layout-land/activity_main.xml
@@ -2,8 +2,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="30dp"
     android:orientation="horizontal"
     tools:context=".MainActivity">
@@ -141,7 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:text="@string/calculate"
         android:onClick="onCalculateClicked"/>
