--- a/ThirdLab/app/src/main/res/layout/activity_main.xml
+++ b/ThirdLab/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/noteField"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -32,23 +32,25 @@
         android:autofillHints="" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/deleteButton"
         android:layout_width="119dp"
         android:layout_height="64dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/button_delete"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/noteField"
+        android:onClick="onDelete"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/saveButton"
         android:layout_width="112dp"
         android:layout_height="67dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:text="@string/button_save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/noteField"
+        android:onClick="onSave"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
