--- a/Lab5/app/src/main/res/layout/contact_list.xml
+++ b/Lab5/app/src/main/res/layout/contact_list.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/phone_number"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/selectItemCheckBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,4 +41,13 @@
         app:layout_constraintEnd_toEndOf="@+id/emailItem"
         app:layout_constraintStart_toStartOf="@+id/emailItem"
         app:layout_constraintTop_toBottomOf="@+id/emailItem" />
+
+    <CheckBox
+        android:id="@+id/selectItemCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
