--- a/Lab5/app/src/main/res/layout/activity_main.xml
+++ b/Lab5/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
+        android:choiceMode="multipleChoice"
         app:layout_constraintBottom_toTopOf="@+id/newContactButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
