--- a/Lab3/app/src/main/res/layout/activity_main.xml
+++ b/Lab3/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,13 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:autofillHints=""
         android:ems="10"
+        android:hint="@string/input_add_note"
         android:inputType="textPersonName"
-        android:text="@string/input_add_note"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <Button
         android:id="@+id/deleteButton"
