--- a/Lab5/app/src/main/res/layout/contact_list.xml
+++ b/Lab5/app/src/main/res/layout/contact_list.xml
@@ -9,6 +9,7 @@
         android:id="@+id/phoneItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/phone_number"
