--- a/Lab6/app/src/main/res/menu/main_menu.xml
+++ b/Lab6/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,7 @@
         android:icon="@drawable/ic_delete_red"
         android:title="@string/delete_item"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/logoutItem"
+        android:title="@string/log_out" />
 </menu>
