--- a/lab8/app/src/main/res/values/constants.xml
+++ b/lab8/app/src/main/res/values/constants.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="contacts_list">ContactsList</string>
-    <string name="contacts_info">ContactsInfo</string>
+    <string name="contacts_list">ShowInfo</string>
+    <string name="contacts_info">ShowList</string>
 </resources>
