--- a/lab10/app/src/main/res/layout/main_fragment.xml
+++ b/lab10/app/src/main/res/layout/main_fragment.xml
@@ -6,13 +6,12 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/idRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:id="@+id/idRecyclerView"/>
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/idFloatingActionAdd"
+        android:id="@+id/idAddContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -20,6 +19,6 @@
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:src="@android:drawable/ic_menu_add"
-        android:contentDescription="@string/create_contact" />
+        android:contentDescription="@string/create" />
 
 </FrameLayout>
